# OpenClaw-Semantic-Worm

./: .gitignore  README.md
daemons/: conductor.py  controller.py  fleet_manager.py  llm_backend.py  minimolt.py  requirements.txt  tsm_logger.py
daemons/systemd/: farm-start.sh
docs/: ARCHITECTURE.md  paper.md
docs/excalidraw/: data-flow.excalidraw  system-architecture.excalidraw  topologies.excalidraw
experiments/: _template.yaml
experiments/semantic-worm/: baseline.yaml  t1-overt.yaml  t1-subtle.yaml  topology-hub.yaml  topology-ring.yaml
farmlib/: pyproject.toml
farmlib/farmlib/: __init__.py  config.py  events.py  experiment.py  farm.py  feed.py  fleet.py  results.py  run.py  topology.py  viz.py
notebooks/: 01_semantic_worm.ipynb
skills/tsm-feed/: SKILL.md
